test/successor_ml/should_not_compile/record_extension_pattern.sml
val { a, ... = x, c, ... = y } = { a = 1, b = 2, c = 3, d = 4 };
